; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashutil.c__hash_get_totalbuckets.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashutil.c__hash_get_totalbuckets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE = common dso_local global i32 0, align 4
@HASH_SPLITPOINT_PHASE_BITS = common dso_local global i32 0, align 4
@HASH_SPLITPOINT_PHASE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_hash_get_totalbuckets(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = shl i32 1, %11
  store i32 %12, i32* %2, align 4
  br label %41

13:                                               ; preds = %1
  %14 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  %17 = sub nsw i32 %15, %16
  %18 = load i32, i32* @HASH_SPLITPOINT_PHASE_BITS, align 4
  %19 = ashr i32 %17, %18
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 %20, %19
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %22, 1
  %24 = shl i32 1, %23
  store i32 %24, i32* %5, align 4
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  %27 = sub nsw i32 %25, %26
  %28 = load i32, i32* @HASH_SPLITPOINT_PHASE_MASK, align 4
  %29 = and i32 %27, %28
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %4, align 4
  %32 = sub nsw i32 %31, 1
  %33 = shl i32 1, %32
  %34 = load i32, i32* @HASH_SPLITPOINT_PHASE_BITS, align 4
  %35 = ashr i32 %33, %34
  %36 = load i32, i32* %6, align 4
  %37 = mul nsw i32 %35, %36
  %38 = load i32, i32* %5, align 4
  %39 = add nsw i32 %38, %37
  store i32 %39, i32* %5, align 4
  %40 = load i32, i32* %5, align 4
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %13, %10
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
